Fix issue with Material UI select dropdown by removing width property on mat-card which was causing mat-select to get squished on Mobile Firefox

--- a/src/app/y2m/y2m.component.css
+++ b/src/app/y2m/y2m.component.css
@@ -1,15 +1,3 @@
-@media (orientation: portrait) {
-     mat-option {
-         margin-left: 125px;
-     }
-}
-	
-@media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution:.001dpcm) {
-     mat-option {
-          margin-left: 100px;
-     }
-}
-
 .buttonClass {
      display: flex;
      flex-direction: row;
@@ -34,7 +22,6 @@
 mat-card {
      border-style: solid;
      border-width: 1px !important;
-     width: 450px;
 }
 
 mat-form-field {
